<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_reservations"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_reservations" />
        <item
            android:id="@+id/nav_userinfo"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_userinfo" />
        <item
            android:id="@+id/nav_balance"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_balance" />
        <item
            android:id="@+id/nav_contact"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_contact" />

        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_logout" />
    </group>
</menu>