<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@id/nav_reservations">

    <fragment
        android:id="@+id/nav_reservations"
        android:name="com.example.countryapp.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_userinfo"
        android:name="com.example.countryapp.ui.users.UsersFragment"
        android:label="@string/menu_userinfo"
        tools:layout="@layout/fragment_users" />

    <fragment
        android:id="@+id/nav_balance"
        android:name="com.example.countryapp.ui.users.UsersFragment"
        android:label="@string/menu_balance"
        tools:layout="@layout/fragment_contact" />

    <fragment
        android:id="@+id/nav_contact"
        android:name="com.example.countryapp.ui.contact.ContactFragment"
        android:label="@string/menu_contact"
        tools:layout="@layout/fragment_contact" />

    <fragment
        android:id="@+id/nav_logout"
        android:name="com.example.countryapp.ui.contact.ContactFragment"
        android:label="@string/menu_logout"
        tools:layout="@layout/fragment_contact" />
</navigation>